[project]
name = "geo-seo-claude-local"
version = "0.1.0"
description = "Local uv-managed GEO/SEO audit utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "requests>=2.32.4,<3.0.0",
  "lxml>=6.0.2,<7.0.0",
  "playwright>=1.56.0,<2.0.0",
  "Pillow>=12.1.0,<13.0.0",
  "urllib3>=2.6.3,<3.0.0",
  "validators>=0.35.0,<1.0.0",
  "reportlab>=4.4.0,<5.0.0",
]

[tool.uv]
package = false
